# pcre

./: .gitignore  CMakeLists.txt
iOS/pcre.xcodeproj/: project.pbxproj
staticbuild/: CMakeLists.txt
win32/: config.h  pcre.sln  pcre.vcxproj
